--- a/website_2024/Makefile
+++ b/website_2024/Makefile
@@ -48,7 +48,7 @@ html:
 	"$(PELICAN)" "$(INPUTDIR)" -o "$(OUTPUTDIR)" -s "$(CONFFILE)" $(PELICANOPTS)
 
 clean:
-	[ ! -d "$(OUTPUTDIR)" ] || rm -rf "$(OUTPUTDIR)"
+	[ ! -d "$(OUTPUTDIR)" ] || rm -rf "$(OUTPUTDIR)" && git checkout "$(OUTPUTDIR)"
 
 regenerate:
 	"$(PELICAN)" -r "$(INPUTDIR)" -o "$(OUTPUTDIR)" -s "$(CONFFILE)" $(PELICANOPTS)
