--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pelican = {extras = ["markdown"], version = "^4.9.1"}
 pelican-image-process = "^3.0.3"
+pelican-i18n-subsites = "^0.9.0"
 
 
 [build-system]
