--- a/website_2025/themes/PyCon-Israel-peliconf/package.json
+++ b/website_2025/themes/PyCon-Israel-peliconf/package.json
@@ -16,7 +16,8 @@
     "sass": "*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp default"
   },
   "author": "carloratm",
   "license": "ISC"
